--- a/src/styles/components/ExperienceBar.module.css
+++ b/src/styles/components/ExperienceBar.module.css
@@ -22,7 +22,7 @@
   background: var(--green);
 }
 
-span.current-Experience {
+span.currentExperience {
   position: absolute;
   top: 12px;
   transform: translateX(-50%);
